hubSide/force-app/main/default/objects/Mouvements_financiers__c/Mouvements_financiers__c.object-meta.xml
<CustomObject>
    <label>Calcul Indemnisation</label>
    <nameField>
        <label>Nom du mouvement financier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calcul Indemnisations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>