hubSide/force-app/main/default/objects/Mouvements_financiers__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Sinistre</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Calcul Indemnisations</relationshipLabel>
    <relationshipName>Mouvements_financiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>