hubSide/force-app/main/default/objects/Mouvements_financiers__c/fields/Cout_choisi__c.field-meta.xml
<CustomField>
    <fullName>Cout_choisi__c</fullName>
    <label>Coût choisi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primes</fullName>
            </value>
            <value>
                <fullName>Echange</fullName>
            </value>
            <value>
                <fullName>Réparation</fullName>
            </value>
            <value>
                <fullName>Règlement par le client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>