hubSide/force-app/main/default/objects/Mouvements_financiers__c/fields/Date_mouvement__c.field-meta.xml
<CustomField>
    <fullName>Date_mouvement__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date du mouvement financier</description>
    <label>Date création</label>
    <type>Date</type>
</CustomField>