hubSide/force-app/main/default/objects/Mouvements_financiers__c/fields/Indemnisation_date__c.field-meta.xml
<CustomField>
    <fullName>Indemnisation_date__c</fullName>
    <label>Date Indemnisation</label>
    <type>Date</type>
</CustomField>