hubSide/force-app/main/default/objects/Mouvements_financiers__c/fields/Libelle__c.field-meta.xml
<CustomField>
    <fullName>Libelle__c</fullName>
    <description>Libéllé libre à saisir par le TC ou le GS</description>
    <label>Libellé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>