hubSide/force-app/main/default/objects/Mouvements_financiers__c/fields/Mode_paiement__c.field-meta.xml
<CustomField>
    <fullName>Mode_paiement__c</fullName>
    <label>Mode de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>Chèque</fullName>
            </value>
            <value>
                <fullName>Prélèvement</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>