hubSide/force-app/main/default/objects/Mouvements_financiers__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <description>Identification du montant du mouvement</description>
    <label>Montant</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>