hubSide/force-app/main/default/objects/Mouvements_financiers__c/fields/Paiement_Versement__c.field-meta.xml
<CustomField>
    <fullName>Paiement_Versement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paiement Versement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Paiement_Versement__c.Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Paiement_Versement__c</referenceTo>
    <relationshipName>Mouvements_financiers</relationshipName>
    <type>Lookup</type>
</CustomField>