hubSide/force-app/main/default/objects/Mouvements_financiers__c/fields/Sens_mouvement__c.field-meta.xml
<CustomField>
    <fullName>Sens_mouvement__c</fullName>
    <label>Sens du mouvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paiement vers le client</fullName>
            </value>
            <value>
                <fullName>Règlement par le client</fullName>
            </value>
            <value>
                <fullName>Interne reparation</fullName>
                <label>Interne réparation</label>
            </value>
            <value>
                <fullName>Interne échange</fullName>
            </value>
            <value>
                <fullName>Interne</fullName>
                <isActive>false</isActive>
                <label>Interne</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>