hubSide/force-app/main/default/objects/Mouvements_financiers__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crée</fullName>
                <default>true</default>
                <label>Crée</label>
            </value>
            <value>
                <fullName>En cours d&apos;approbation</fullName>
            </value>
            <value>
                <fullName>Validé</fullName>
            </value>
            <value>
                <fullName>Demande en cours</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Rejeté</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Terminé</label>
            </value>
            <value>
                <fullName>Invalidated</fullName>
                <label>Invalidé</label>
            </value>
            <value>
                <fullName>En attente d&apos;approbation</fullName>
                <isActive>false</isActive>
                <label>En attente d&apos;approbation</label>
            </value>
            <value>
                <fullName>Encaissé</fullName>
                <isActive>false</isActive>
                <label>Encaissé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>