hubSide/force-app/main/default/objects/Mouvements_financiers__c/fields/TECH_AssetID__c.field-meta.xml
<CustomField>
    <fullName>TECH_AssetID__c</fullName>
    <formula>Case__r.AssetId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_AssetID</label>
    <type>Text</type>
</CustomField>