hubSide/force-app/main/default/objects/Mouvements_financiers__c/fields/Type_mouvement__c.field-meta.xml
<CustomField>
    <fullName>Type_mouvement__c</fullName>
    <label>Type Coût</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cout_choisi__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime pour echange</fullName>
                <label>Prime pour échange</label>
            </value>
            <value>
                <fullName>Geste commercial</fullName>
            </value>
            <value>
                <fullName>Indemnite retard suite à expertise</fullName>
                <label>Indemnité retard suite à expertise</label>
            </value>
            <value>
                <fullName>Prime pour reparation par le client</fullName>
                <label>Prime pour réparation par le client</label>
            </value>
            <value>
                <fullName>Prime pour communication frauduleuse</fullName>
            </value>
            <value>
                <fullName>Cout interne reparation</fullName>
                <label>Coût interne réparation</label>
            </value>
            <value>
                <fullName>Cout interne d&apos;echange</fullName>
                <label>Coût interne d&apos;échange</label>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
            <value>
                <fullName>Cout prime magasin</fullName>
                <label>Coût prime magasin</label>
            </value>
            <value>
                <fullName>Complément réparation</fullName>
            </value>
            <value>
                <fullName>Cout forfait de reparation</fullName>
                <isActive>false</isActive>
                <label>Coût forfait de réparation</label>
            </value>
            <value>
                <fullName>Remboursement client</fullName>
                <isActive>false</isActive>
                <label>Remboursement client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>