hubSide/force-app/main/default/objects/Mouvements_financiers__c/fields/ValidatorUserName__c.field-meta.xml
<CustomField>
    <fullName>ValidatorUserName__c</fullName>
    <description>Holds the name of the person who initiated the validation process.
used in approval process field update.</description>
    <label>Valideur</label>
    <length>60</length>
    <type>Text</type>
</CustomField>