hubSide/force-app/main/default/objects/Mouvements_financiers__c/validationRules/Statut_termine.validationRule-meta.xml
<ValidationRule>
    <fullName>Statut_termine</fullName>
    <active>true</active>
    <description>Si le statut est Terminé il n&apos;est plus modifiable</description>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Statut__c), &apos;Completed&apos;)
&amp;&amp;
ISCHANGED(Statut__c)
&amp;&amp;
NOT($User.ProfileId = &apos;00e3X000002WyHg&apos;)</errorConditionFormula>
    <errorDisplayField>Statut__c</errorDisplayField>
    <errorMessage>Cette indemnisation est terminée, vous ne pouvez plus modifier son statut.</errorMessage>
</ValidationRule>