hubSide/force-app/main/default/objects/Mouvements_financiers__c/validationRules/VR_CAL_CheckNameChange.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CAL_CheckNameChange</fullName>
    <active>true</active>
    <description>Block update if the name of the record have changed</description>
    <errorConditionFormula>AND(
				$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
				$Profile.Name &lt;&gt; &quot;SFAM API&quot;,
				$Profile.Name &lt;&gt; &quot;Administrateur système&quot;,
				PRIORVALUE(Name) &lt;&gt; Name)</errorConditionFormula>
    <errorMessage>Vous ne pouvez pas renommer un calcul indemnisation.</errorMessage>
</ValidationRule>